--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+  <!-- 카카오맵 라이브러리 -->
+  <script type="text/javascript"
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=188be1d87e6004afccadc3cb7c01351a&libraries=services"></script>
   <!-- 리셋 css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
   <!-- 노토산스 폰트 -->
